--- a/index.html
+++ b/index.html
@@ -6,91 +6,173 @@
     <title>Shubham - Developer Portfolio</title>
 
     <style>
-        * { margin: 0; padding: 0; }
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        html { scroll-behavior: smooth; }
+
         body {
-            background: #0a0a23;
+            background: #080820;
             color: #fff;
-            font-family: 'Poppins', sans-serif;
+            font-family: "Poppins", sans-serif;
         }
+
+        /* NAVBAR */
         nav {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 20px 60px;
-            background: #1b1b3a;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+            background: #13133a;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.6);
+            position: sticky;
+            top: 0;
+            z-index: 100;
         }
+
         nav a {
             color: #fff;
             text-decoration: none;
-            margin: 0 20px;
-            font-size: 1.1rem;
+            margin: 0 18px;
+            font-size: 1.05rem;
             transition: 0.3s;
         }
-        nav a:hover { color: #ffd54f; }
 
+        nav a:hover { color: #ffd54f; transform: scale(1.1); }
+
+        /* HERO SECTION */
         .hero {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 120px 80px;
-        }
-        .hero-text { font-size: 2.4rem; line-height: 3.4rem; }
-        .hero-text span { color: #6c63ff; }
-        .hero img {
-            width: 420px;
-            filter: drop-shadow(0 0 20px #6c63ff);
+            padding: 130px 80px;
+            animation: fadeIn 1.3s ease-in-out;
         }
 
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(40px); }
+            to { opacity: 1; transform: translateY(0px); }
+        }
+
+        .hero-text {
+            font-size: 2.5rem;
+            line-height: 3.5rem;
+            animation: slideLeft 1s ease-out;
+        }
+
+        @keyframes slideLeft {
+            from { opacity: 0; transform: translateX(-40px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+
+        .hero-text span {
+            color: #6c63ff;
+            text-shadow: 0px 0px 12px #6c63ff;
+        }
+
+        .hero img {
+            width: 430px;
+            filter: drop-shadow(0px 0px 25px #6c63ff);
+            animation: float 3s infinite ease-in-out;
+        }
+
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-18px); }
+            100% { transform: translateY(0px); }
+        }
+
+        /* PROJECT SECTION */
         .projects {
             padding: 60px;
             max-width: 1100px;
             margin: auto;
         }
-        .projects h2 { font-size: 2.2rem; text-align: center; margin-bottom: 40px; }
+
+        .projects h2 {
+            font-size: 2.3rem;
+            text-align: center;
+            margin-bottom: 40px;
+            animation: fadeIn 1.2s;
+        }
 
         .card {
-            background: #12122b;
+            background: #12122f;
             padding: 25px;
             border-radius: 14px;
             margin: 25px 0;
             display: flex;
             gap: 25px;
             align-items: center;
-            box-shadow: 0 5px 18px rgba(0,0,0,0.5);
+            box-shadow: 0px 5px 20px rgba(0,0,0,0.6);
+            transition: 0.4s;
+            border: 1px solid transparent;
         }
+
+        .card:hover {
+            transform: translateY(-8px);
+            border: 1px solid #6c63ff;
+            box-shadow: 0px 8px 30px rgba(108,99,255,0.5);
+        }
+
         .card img {
-            width: 180px;
+            width: 190px;
             border-radius: 10px;
             border: 2px solid #6c63ff;
+            transition: 0.3s;
         }
-        .card-title { font-size: 1.6rem; margin-bottom: 10px; }
-        .card p { font-size: 1rem; color: #ccc; }
+
+        .card img:hover {
+            transform: scale(1.05);
+        }
+
+        .card-title {
+            font-size: 1.6rem;
+            margin-bottom: 10px;
+            color: #9a8cff;
+        }
+
+        .card p {
+            font-size: 1rem;
+            color: #cccccc;
+        }
 
         .btn {
             display: inline-block;
             margin-top: 18px;
-            padding: 10px 22px;
+            padding: 12px 25px;
             background: #6c63ff;
             color: #fff;
-            border-radius: 8px;
+            border-radius: 10px;
             text-decoration: none;
             font-size: 1rem;
             transition: 0.3s;
         }
-        .btn:hover { background: #574fe3; }
 
+        .btn:hover {
+            background: #5548e3;
+            box-shadow: 0px 0px 15px #6c63ff;
+            transform: scale(1.05);
+        }
+
+        /* FOOTER */
         footer {
             text-align: center;
             padding: 25px 0;
-            background: #14142b;
-            margin-top: 50px;
+            background: #14142d;
             color: #aaa;
-            font-size: 0.9rem;
+            margin-top: 60px;
+            font-size: 0.95rem;
+        }
+
+        /* RESPONSIVE */
+        @media (max-width: 900px) {
+            .hero { flex-direction: column; text-align: center; }
+            .hero img { margin-top: 40px; width: 320px; }
+            .card { flex-direction: column; text-align: center; }
         }
     </style>
 </head>
 <body>
+
     <nav>
         <div class="logo">Shubham's Portfolio</div>
         <div>
@@ -134,5 +216,6 @@
     <footer>
         © 2025 Shubham | All Rights Reserved
     </footer>
+
 </body>
 </html>
