--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             position: sticky;
             top: 0;
             z-index: 1000;
-            transition: 0.3s;
         }
 
         nav .logo {
@@ -206,7 +205,7 @@
             <div class="card-content">
                 <div class="card-title">🛒 Amazon Clone</div>
                 <p>A fully functional Amazon website clone with product layout, modern UI, and responsive design.</p>
-                <a href="#" class="btn">🔗 Live Demo</a>
+                <a href="https://github.com/shubham-nov06/Amazon-Clone" class="btn" target="_blank">🔗 Live Demo</a>
             </div>
         </div>
 
@@ -215,13 +214,13 @@
             <div class="card-content">
                 <div class="card-title">🎓 College Website</div>
                 <p>Professional college website with clean UI, multiple sections, and fully responsive pages.</p>
-                <a href="#" class="btn">🔗 Live Demo</a>
+                <a href="https://github.com/shubham-nov06/College-Website" class="btn" target="_blank">🔗 Live Demo</a>
             </div>
         </div>
     </section>
 
-    <footer>
-        © 2025 Shubham | All Rights Reserved
+    <footer id="contact">
+        © 2025 Shubham | All Rights Reserved | <a href="https://github.com/shubham-nov06" target="_blank">GitHub</a>
     </footer>
 </body>
 </html>
