--- a/index.html
+++ b/index.html
@@ -160,19 +160,30 @@
     <section class="projects" id="projects">
         <h2>Featured Projects</h2>
 
-        <div class="card">
-            <img src="amazon-clone.png" />
-            <div class="card-content">
-                <div class="card-title">Amazon Clone</div>
+        <a href="https://github.com/shubham-nov06/College-Website" target="_blank" class="card" style="display:flex; text-decoration:none; color:inherit;">
+    <img src="college-site.png" alt="College Website Project" />
+    <div class="card-content">
+        <div class="card-title">🎓 College Website</div>
+        <p>Professional college website with clean UI, multiple sections, and fully responsive pages.</p>
+    </div>
+</a>amazon-clone.png" alt="Amazon Clone Project" />
+    <div class="card-content">
+        <div class="card-title">🛒 Amazon Clone</div>
+        <p>A fully functional Amazon website clone with product layout, modern UI, and responsive design.</p>
+    </div>
+</a>
                 <p>Fully responsive Amazon website clone.</p>
                 <a href="https://github.com/shubham-nov06/Amazon-Clone" class="btn">GitHub Repo</a>
             </div>
         </div>
 
-        <div class="card">
-            <img src="college-site.png" />
-            <div class="card-content">
-                <div class="card-title">College Website</div>
+        <a href="https://github.com/shubham-nov06/College-Website" target="_blank" class="card" style="display:flex; text-decoration:none; color:inherit;">
+    <img src="college-site.png" alt="College Website Project" />
+    <div class="card-content">
+        <div class="card-title">🎓 College Website</div>
+        <p>Professional college website with clean UI, multiple sections, and fully responsive pages.</p>
+    </div>
+</a>
                 <p>Clean professional multi-page responsive website.</p>
                 <a href="https://github.com/shubham-nov06/College-Website" class="btn">GitHub Repo</a>
             </div>
