--- a/index.html
+++ b/index.html
@@ -1,243 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shubham - Web Developer Portfolio</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Shubham - Web Developer Portfolio</title>
 
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        html { scroll-behavior: smooth; }
-        body {
-            font-family: "Poppins", sans-serif;
-            background: #0a0a23;
-            color: #fff;
-            line-height: 1.6;
-        }
+<style>
+* { margin: 0; padding: 0; box-sizing: border-box; }
+html { scroll-behavior: smooth; }
+body {
+    font-family: "Poppins", sans-serif;
+    background: #0a0a23;
+    color: #fff;
+    line-height: 1.6;
+}
 
-        a { text-decoration: none; color: inherit; }
+/* NAVBAR */
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 60px;
+    background: rgba(19,19,58,0.85);
+    backdrop-filter: blur(10px);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    border-bottom: 1px solid #282852;
+}
+nav .logo {
+    font-weight: 700;
+    font-size: 1.8rem;
+    color: #6c63ff;
+}
+nav a {
+    margin: 0 15px;
+    font-weight: 500;
+    transition: 0.3s;
+}
+nav a:hover {
+    color: #ffd54f;
+    transform: scale(1.05);
+}
 
-        /* NAVBAR */
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 60px;
-            background: rgba(19, 19, 58, 0.85);
-            backdrop-filter: blur(10px);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-            border-bottom: 1px solid #282852;
-        }
-        nav .logo {
-            font-weight: 700;
-            font-size: 1.8rem;
-            color: #6c63ff;
-        }
-        nav a {
-            margin: 0 15px;
-            font-weight: 500;
-            transition: 0.3s;
-        }
-        nav a:hover {
-            color: #ffd54f;
-            transform: scale(1.05);
-        }
+/* HERO */
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 140px 80px;
+    gap: 40px;
+}
+.hero-text {
+    max-width: 550px;
+    font-size: 2.8rem;
+    font-weight: 600;
+    animation: fadeIn 1.4s ease;
+}
+.hero-text span { color: #6c63ff; }
+.hero-sub {
+    font-size: 1.2rem;
+    color: #cfcfcf;
+    margin-top: 15px;
+}
+.hero img {
+    width: 420px;
+    border-radius: 12px;
+    filter: drop-shadow(0px 0px 30px #6c63ff);
+    animation: float 3s ease-in-out infinite;
+}
 
-        /* HERO */
-        .hero {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 140px 80px;
-            gap: 40px;
-        }
-        .hero-text {
-            max-width: 550px;
-            font-size: 2.8rem;
-            font-weight: 600;
-            animation: fadeIn 1.4s ease;
-        }
-        .hero-text span { color: #6c63ff; }
-        .hero-sub {
-            font-size: 1.2rem;
-            color: #cfcfcf;
-            margin-top: 15px;
-        }
-        .hero img {
-            width: 420px;
-            border-radius: 12px;
-            filter: drop-shadow(0px 0px 30px #6c63ff);
-            animation: float 3s ease-in-out infinite;
-        }
+@keyframes fadeIn { from { opacity:0; transform: translateY(40px);} }
+@keyframes float { 50% { transform: translateY(-12px);} }
 
-        @keyframes fadeIn { from { opacity:0; transform: translateY(40px);} }
-        @keyframes float { 50% { transform: translateY(-12px);} }
+/* ABOUT */
+.about {
+    max-width: 1100px;
+    margin: 80px auto;
+    padding: 50px;
+    background: #12122f;
+    border-radius: 12px;
+    text-align: center;
+}
+.about h2 { font-size: 2.2rem; color: #6c63ff; }
+.about p { margin-top: 10px; color: #ccc; font-size: 1.1rem; }
 
-        /* ABOUT */
-        .about {
-            max-width: 1100px;
-            margin: 80px auto;
-            padding: 50px;
-            background: #12122f;
-            border-radius: 12px;
-            text-align: center;
-        }
-        .about h2 { font-size: 2.2rem; color: #6c63ff; }
-        .about p { margin-top: 10px; color: #ccc; font-size: 1.1rem; }
+/* PROJECTS */
+.projects {
+    max-width: 1100px;
+    margin: 80px auto;
+    padding: 0 20px;
+}
+.projects h2 {
+    font-size: 2.3rem;
+    text-align: center;
+    margin-bottom: 50px;
+    color: #6c63ff;
+}
+.project-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    gap: 30px;
+}
+.project-card {
+    background: #12122f;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.5);
+    transition: .3s;
+}
+.project-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 35px rgba(108, 99, 255, 0.5);
+}
+.project-card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 10px;
+    border: 1px solid #6c63ff;
+}
+.project-card h3 { color: #6c63ff; margin-top: 15px; }
+.project-card p { color: #ccc; }
+.btn {
+    display: inline-block;
+    margin-top: 12px;
+    padding: 10px 18px;
+    background: #6c63ff;
+    border-radius: 8px;
+    color: #fff;
+}
 
-        /* PROJECTS */
-        .projects {
-            max-width: 1100px;
-            margin: 80px auto;
-            padding: 0 20px;
-        }
-        .projects h2 {
-            font-size: 2.3rem;
-            text-align: center;
-            margin-bottom: 50px;
-            color: #6c63ff;
-        }
+/* GITHUB AUTO SECTION */
+#github-projects {
+    max-width: 1100px;
+    margin: 80px auto;
+}
+#github-projects h2 {
+    text-align: center;
+    color: #6c63ff;
+    margin-bottom: 30px;
+}
 
-        .project-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-        }
+/* SKILLS */
+.skills { text-align: center; max-width: 1100px; margin: 80px auto; }
+.skill-box { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
+.skill-item {
+    padding: 15px 25px;
+    background: #12122f;
+    border-radius: 8px;
+    font-weight: 500;
+    border: 1px solid #6c63ff;
+}
 
-        .project-card {
-            background: #12122f;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 5px 25px rgba(0,0,0,0.5);
-            transition: .3s;
-        }
-        .project-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 35px rgba(108, 99, 255, 0.5);
-        }
-        .project-card img {
-            width: 100%;
-            height: 180px;
-            object-fit: cover;
-            border-radius: 10px;
-            border: 1px solid #6c63ff;
-        }
-        .project-card h3 {
-            color: #6c63ff;
-            margin-top: 15px;
-        }
-        .project-card p { color: #ccc; }
-        .btn {
-            display: inline-block;
-            margin-top: 12px;
-            padding: 10px 18px;
-            background: #6c63ff;
-            border-radius: 8px;
-        }
+/* FOOTER */
+footer {
+    text-align: center;
+    padding: 25px 0;
+    margin-top: 60px;
+    background: #14142d;
+}
 
-        /* GitHub Repo Section */
-        #github-projects { max-width: 1100px; margin: 80px auto; }
-        #github-projects h2 { text-align:center; color:#6c63ff; margin-bottom:30px; }
-
-        /* SKILLS */
-        .skills { text-align:center; max-width:1100px; margin:80px auto; }
-        .skill-box { display:flex; flex-wrap:wrap; justify-content:center; gap:20px; }
-        .skill-item {
-            padding: 15px 25px;
-            background: #12122f;
-            border-radius: 8px;
-            font-weight: 500;
-            border: 1px solid #6c63ff;
-        }
-
-        footer {
-            text-align:center;
-            padding: 25px 0;
-            margin-top:60px;
-            background: #14142d;
-        }
-
-        @media (max-width: 900px) {
-            .hero { flex-direction:column; text-align:center; }
-            .hero img { width:300px; }
-        }
-    </style>
+@media (max-width: 900px) {
+    .hero { flex-direction: column; text-align: center; }
+    .hero img { width: 300px; }
+}
+</style>
 </head>
 <body>
 
-    <nav>
-        <div class="logo">Shubham</div>
-        <div>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-            <a href="#github-projects">GitHub Repos</a>
-            <a href="#skills">Skills</a>
-            <a href="https://github.com/shubham-nov06" target="_blank">GitHub</a>
-        </div>
-    </nav>
+<nav>
+    <div class="logo">Shubham</div>
+    <div>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#github-projects">GitHub Repos</a>
+        <a href="#skills">Skills</a>
+        <a href="https://github.com/shubham-nov06" target="_blank">GitHub</a>
+    </div>
+</nav>
 
-    <section class="hero" id="home">
-        <div>
-            <div class="hero-text">Hi, I'm <span>Shubham</span> 👋</div>
-            <div class="hero-sub">Web Developer crafting clean, modern & responsive web experiences.</div>
-        </div>
-        <img src="developer-png.webp" />
-    </section>
+<section class="hero" id="home">
+    <div>
+        <div class="hero-text">Hi, I'm <span>Shubham</span> 👋</div>
+        <div class="hero-sub">Web Developer crafting clean, modern & responsive web experiences.</div>
+    </div>
+    <img src="developer-png.webp" alt="Shubham Developer"/>
+</section>
 
-    <section class="about" id="about">
-        <h2>About Me</h2>
-        <p>I’m Shubham, a passionate Web Developer focused on modern UI, responsive design and building creative digital experiences.</p>
-    </section>
+<section class="about" id="about">
+    <h2>About Me</h2>
+    <p>I’m Shubham, a passionate Web Developer focused on modern UI, responsive design, and building creative digital experiences.</p>
+</section>
 
-    <section class="projects" id="projects">
-        <h2>Featured Projects</h2>
+<section class="projects" id="projects">
+    <h2>Featured Projects</h2>
+    <div class="project-grid">
 
-        <div class="project-grid">
-
-            <div class="project-card">
-                <img src="amazon-clone.png" />
-                <h3>🛒 Amazon Clone</h3>
-                <p>Fully responsive Amazon UI clone with clean modern layout.</p>
-                <a href="https://github.com/shubham-nov06/Amazon-Clone" target="_blank" class="btn">View Repo</a>
-            </div>
-
-            <div class="project-card">
-                <img src="college-site.png" />
-                <h3>🎓 College Website</h3>
-                <p>Professional responsive multi-page college website.</p>
-                <a href="https://github.com/shubham-nov06/College-Website" target="_blank" class="btn">View Repo</a>
-            </div>
+        <div class="project-card">
+            <img src="amazon-clone.png" alt="Amazon Clone"/>
+            <h3>🛒 Amazon Clone</h3>
+            <p>Fully responsive Amazon UI clone with clean modern layout.</p>
+            <a href="https://github.com/shubham-nov06/Amazon-Clone" target="_blank" class="btn">View Repo</a>
         </div>
 
-    </section>
+        <div class="project-card">
+            <img src="college-site.png" alt="College Website"/>
+            <h3>🎓 College Website</h3>
+            <p>Professional responsive multi-page college website.</p>
+            <a href="https://github.com/shubham-nov06/College-Website" target="_blank" class="btn">View Repo</a>
+        </div>
 
-    <!-- AUTO FETCH GITHUB REPOS -->
-    <section id="github-projects">
-        <h2>My GitHub Repositories</h2>
-        <div id="repo-container"></div>
-    </section>
+    </div>
+</section>
 
-       <script src="https://cdn.jsdelivr.net/gh/peterbenoit/RepoWidget@latest/dist/repoWidget.min.js"></script>
-    <script>
-        createRepoWidget({
-            username: "shubham-nov06",
-            containerId: "repo-container",
-            columns: { desktop: 3, tablet: 2, mobile: 1 },
-            maxRepos: 6,
-            sortBy: "updated",
-            scaleOnHover: 1.05,
-            cardStyles: {
-                backgroundColor: "#12122f",
-                borderRadius: "10px",
-                boxShadow: "0 4px 15px rgba(108,99,255,0.3)"
-            },
-            textStyles: {
-                titleColor: "#6c63ff",
-                descriptionColor: "#ccc",
-                iconColor: "#999"
-            }
-        });
-    </script>
+<section id="github-projects">
+    <h2>My GitHub Repositories</h2>
+    <div id="repo-container"></div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/gh/peterbenoit/RepoWidget@latest/dist/repoWidget.min.js"></script>
+<script>
+createRepoWidget({
+    username: "shubham-nov06",
+    containerId: "repo-container",
+    columns: { desktop: 3, tablet: 2, mobile: 1 },
+    maxRepos: 6,
+    sortBy: "updated",
+    scaleOnHover: 1.05,
+    cardStyles: {
+        backgroundColor: "#12122f",
+        borderRadius: "10px",
+        boxShadow: "0 4px 15px rgba(108,99,255,0.3)"
+    },
+    textStyles: {
+        titleColor: "#6c63ff",
+        descriptionColor: "#ccc",
+        iconColor: "#999"
+    }
+});
+</script>
+
+<section class="skills" id="skills">
+    <h2>My Skills</h2>
+    <div class="skill-box">
+        <div class="skill-item">HTML</div>
+        <div class="skill-item">CSS</div>
+        <div class="skill-item">JavaScript</div>
+        <div class="skill-item">Git & GitHub</div>
+        <div class="skill-item">Responsive Design</div>
+        <div class="skill-item">UI / UX Design</div>
+    </div>
+</section>
+
+<footer>
+    © 2025 Shubham | All Rights Reserved | <a href="https://github.com/shubham-nov06" target="_blank">GitHub</a>
+</footer>
+
+</body>
+</html>
