--- a/index.html
+++ b/index.html
@@ -113,14 +113,7 @@ nav a:hover {
     transform: translateY(-5px);
     box-shadow: 0 5px 35px rgba(108, 99, 255, 0.5);
 }
-.project-card img {
-    width: 100%;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 10px;
-    border: 1px solid #6c63ff;
-}
-.project-card h3 { color: #6c63ff; margin-top: 15px; }
+.project-card h3 { color: #6c63ff; margin-bottom: 12px; }
 .project-card p { color: #ccc; }
 .btn {
     display: inline-block;
@@ -199,14 +192,12 @@ footer {
     <div class="project-grid">
 
         <div class="project-card">
-            <img src="amazon-clone.png" alt="Amazon Clone"/>
             <h3>🛒 Amazon Clone</h3>
             <p>Fully responsive Amazon UI clone with clean modern layout.</p>
             <a href="https://github.com/shubham-nov06/Amazon-Clone" target="_blank" class="btn">View Repo</a>
         </div>
 
         <div class="project-card">
-            <img src="college-site.png" alt="College Website"/>
             <h3>🎓 College Website</h3>
             <p>Professional responsive multi-page college website.</p>
             <a href="https://github.com/shubham-nov06/College-Website" target="_blank" class="btn">View Repo</a>
